--- a/Css/Componentes/Footer/footer.css
+++ b/Css/Componentes/Footer/footer.css
@@ -9,3 +9,99 @@
     padding-top: 2rem;
     margin-top: 2rem;
 }
+
+@media(max-width: 1240px) {
+    .footer__caixa_email {
+        gap: 1rem;
+        padding: 3rem 0;
+        margin: 0;
+        border-radius: 0;
+    }
+    .footer__caixa_email_texto i {
+        font-size: 3rem;
+    }
+    .footer__caixa_email_texto_div_h4 {
+        font-size: 1.5rem;
+    }
+    .footer__caixa_email_texto_div_p {
+        font-size: 1.1rem;
+    }
+    .footer__caixa_email_enviar {
+        gap: 0.7rem;
+    }
+    .footer__caixa_email_enviar_input {
+        font-size: 1.3rem;
+        width: 350px;
+        padding: 0.5rem 0.6rem;
+        border: solid 2px var(--cor-07);
+    }
+    .footer__caixa_email_enviar_button {
+        background-color: var(--cor-06);
+        font-size: 1.2rem;
+        padding: 0.3rem;
+        border: solid 2px var(--cor-07);
+    }
+    .footer__caixa_email_enviar_button:hover {
+        background-color: var(--cor-07);
+        color: var(--cor-06);
+    }
+}
+
+@media(max-width: 1050px) {
+    .footer__caixa_email {
+        flex-direction: column;
+        gap: 2rem;
+        padding: 1.7rem 0;
+    }
+    .footer__caixa_email_enviar_button {
+        background-color: var(--cor-07);
+        color: var(--cor-04);
+    }
+    .footer__caixa_email_enviar_button:hover {
+        background-color: var(--cor-06);
+        color: var(--cor-04);
+    }
+}
+
+@media(max-width: 600px) {
+    .footer__caixa_email {
+        background-color: transparent;
+        gap: 1rem;
+        padding: 1.4rem 0;
+    }
+    .footer__caixa_email_texto i {
+        color: var(--cor-05);
+        font-size: 2.1rem;
+    }
+    .footer__caixa_email_texto_div_h4 {
+        font-size: 1.2rem;
+    }
+    .footer__caixa_email_texto_div_p {
+        font-size: 0.9rem;
+    }
+    .footer__caixa_email_enviar {
+        gap: 0.3rem;
+    }
+    .footer__caixa_email_enviar_input {
+        font-size: 1.1rem;
+        width: 250px;
+        padding: 0.3rem 0.3rem;
+        border: solid 2px var(--cor-05);
+        border-radius: 0.3rem;
+    }
+    .footer__caixa_email_enviar_input::placeholder {
+        color: var(--cor-01);
+    }
+    .footer__caixa_email_enviar_button {
+        background-color: transparent;
+        font-size: 1rem;
+        padding: 0.2rem;
+        border: solid 2px var(--cor-05);
+        border-radius: 0.4rem;
+    }
+    .footer__caixa_email_enviar_button:hover {
+        background-color: var(--cor-05);
+        color: var(--cor-01);
+        border: solid 2px var(--cor-02);
+    }
+}
