--- a/Css/Componentes/Footer/footer.css
+++ b/Css/Componentes/Footer/footer.css
@@ -69,6 +69,9 @@
         gap: 1rem;
         padding: 1.4rem 0;
     }
+    .footer__caixa_email_texto {
+        gap: 0.1rem;
+    }
     .footer__caixa_email_texto i {
         color: var(--cor-05);
         font-size: 2.1rem;
