--- a/Css/Componentes/Footer/footer.css
+++ b/Css/Componentes/Footer/footer.css
@@ -70,14 +70,15 @@
         padding: 1.4rem 0;
     }
     .footer__caixa_email_texto {
+        flex-direction: column;
         gap: 0.2rem;
     }
     .footer__caixa_email_texto i {
         color: var(--cor-05);
-        font-size: 2rem;
+        font-size: 2.1rem;
     }
     .footer__caixa_email_texto_div_h4 {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
     }
     .footer__caixa_email_texto_div_p {
         font-size: 0.9rem;
