--- a/Css/Componentes/Footer/footer.css
+++ b/Css/Componentes/Footer/footer.css
@@ -61,6 +61,10 @@
         background-color: var(--cor-06);
         color: var(--cor-04);
     }
+
+    .footer__informacoes_descricao {
+        flex-wrap: wrap;
+    }
 }
 
 @media(max-width: 600px) {
@@ -75,13 +79,13 @@
     }
     .footer__caixa_email_texto i {
         color: var(--cor-05);
-        font-size: 2rem;
+        font-size: 2.1rem;
     }
     .footer__caixa_email_texto_div_h4 {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
     }
     .footer__caixa_email_texto_div_p {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
     .footer__caixa_email_enviar {
         gap: 0.3rem;
@@ -107,5 +111,65 @@
         background-color: var(--cor-05);
         color: var(--cor-01);
         border: solid 2px var(--cor-02);
+    }
+
+    .footer__informacoes {
+        padding: 1rem;
+    }
+    .footer__informacoes_titulo {
+        gap: 0.6rem;
+        border-bottom: solid 4px var(--cor-05);
+    }
+    .footer__informacoes_titulo_img {
+        width: 65px;
+        padding: 0.2rem;
+    }
+    .footer__informacoes_titulo_h1 {
+        font-size: 1.6rem;
+    }
+    .footer__informacoes_descricao {
+        flex-direction: column;
+        gap: 1.2rem;
+    }
+    .footer__informacoes_descricao_div {
+        gap: 0.8rem;
+    }
+    .footer__informacoes_descricao_div_h5 {
+        font-size: 1.2rem;
+    }
+    .footer__informacoes_descricao_div_nav {
+        gap: 0.8rem;
+    }
+    .footer__informacoes_descricao_div_nav_bancos {
+        gap: 0.8rem;
+        width: 100%;
+    }
+    .footer__informacoes_descricao_div_nav_a {
+        gap: 0.7rem;
+        padding-bottom: 0.2rem;
+    }
+    .footer__informacoes_descricao_div_nav_a i {
+        font-size: 1.4rem;
+    }
+    .footer__informacoes_descricao_div_p {
+        max-width: 100%;
+    }
+    .footer__informacoes_descricao_div_nav_bancos img {
+        width: 40px;
+    }
+    
+    .footer__informacoes_descricao_div:nth-child(1) .footer__informacoes_descricao_div_nav {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .footer__informacoes_descricao_div:nth-child(1) .footer__informacoes_descricao_div_nav .footer__informacoes_descricao_div_nav_a {
+        border-bottom: none;
+    }
+    .footer__informacoes_descricao_div:nth-child(1) .footer__informacoes_descricao_div_nav .footer__informacoes_descricao_div_nav_a p {
+        display: none;
+    }
+
+    .footer__informacoes_descricao_div:nth-child(4) {
+        display: none;
     }
 }
