--- a/Css/Componentes/Historia/historia.css
+++ b/Css/Componentes/Historia/historia.css
@@ -49,3 +49,76 @@
     font-family: var(--fonte-historia);
     font-size: 1.3rem;
 }
+
+@media(max-width: 920px) {
+    .conteudo__historia {
+        gap: 1.5rem;
+        margin-top: 2rem;
+        padding: 1.6rem 0;
+    }
+    .conteudo__historia_titulo {
+        padding: 0.2rem 0.5rem;
+        border-radius: 1.8rem;
+    }
+    .conteudo__historia_titulo_h1 {
+        font-size: 2.2rem;
+        letter-spacing: 0.2rem;
+    }
+    .conteudo__historia_escritas {
+        gap: 1.4rem;
+        width: 90%;
+    }
+    .conteudo__historia_escritas_texto {
+        gap: 0.3rem;
+    }
+    .conteudo__historia_escritas_texto_h3 {
+        font-size: 1.6rem;
+        letter-spacing: 0rem;
+    }
+    .conteudo__historia_escritas_texto_p {
+        font-size: 1.2rem;
+    }
+}
+
+@media(max-width: 710px) {
+    .conteudo__historia {
+        margin-top: 1.5rem;
+    }
+    .conteudo__historia_titulo {
+        border-radius: 1.6rem;
+    }
+    .conteudo__historia_titulo_h1 {
+        font-size: 2rem;
+        letter-spacing: 0.1rem;
+    }
+    .conteudo__historia_escritas {
+        gap: 1.3rem;
+        width: 90%;
+    }
+    .conteudo__historia_escritas_texto_h3 {
+        font-size: 1.5rem;
+    }
+    .conteudo__historia_escritas_texto_p {
+        font-size: 1.1rem;
+    }
+}
+
+@media(max-width: 600px) {
+    .conteudo__historia_titulo {
+        border-radius: 1.4rem;
+    }
+    .conteudo__historia_titulo_h1 {
+        font-size: 1.8rem;
+    }
+    .conteudo__historia_escritas {
+        flex-direction: column;
+        gap: 1rem;
+        width: 94%;
+    }
+    .conteudo__historia_escritas_texto_h3 {
+        font-size: 1.4rem;
+    }
+    .conteudo__historia_escritas_texto_p {
+        font-size: 1rem;
+    }
+}
