--- a/Css/Componentes/Localidades/localidade.css
+++ b/Css/Componentes/Localidades/localidade.css
@@ -71,3 +71,129 @@
 .conteudo__locais_descricao_link:hover {
     color: var(--cor-05);
 }
+
+@media(max-width: 1120px) {
+    .conteudo__localidades_titulo {
+        background-color: var(--cor-05);
+        padding: 0.5rem 1.7rem;
+        margin-top: 2rem;
+        margin-bottom: 3rem;
+        border-radius: 1.7rem;
+    }
+    .conteudo__localidades_titulo_h1 {
+        color: var(--cor-06);
+        font-size: 2rem;
+    }
+    .conteudo__localidades_locais {
+        gap: 2rem;
+        padding: 0 1.6rem;
+        margin-bottom: 2rem;
+    }
+    .conteudo__locais_local {
+        gap: 1.4rem;
+    }
+    .conteudo__locais_local_img {
+        min-width: 60%;
+        height: 65vh;
+        border-radius: 2.6rem;
+    }
+    .conteudo__locais_local_descricao {
+        gap: 0.6rem;
+    }
+    .conteudo__locais_descricao_local {
+        font-size: 1.6rem;
+    }
+    .conteudo__locais_descricao_texto {
+        font-size: 1.2rem;
+    }
+    .conteudo__locais_descricao_link {
+        font-size: 1.6rem;
+    }
+}
+
+@media(max-width: 820px) {
+    .conteudo__localidades_titulo {
+        background-color: var(--cor-07);
+        margin-bottom: 2rem;
+    }
+    .conteudo__localidades_titulo_h1 {
+        color: var(--cor-04);
+        font-size: 1.8rem;
+    }
+    .conteudo__locais_local {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .conteudo__locais_local_img {
+        min-width: 80%;
+        height: 60vh;
+        border-radius: 2rem;
+    }
+    .conteudo__locais_local_descricao {
+        gap: 0.4rem;
+    }
+    .conteudo__locais_descricao_local {
+        font-size: 1.5rem;
+    }
+    .conteudo__locais_descricao_link {
+        font-size: 1.4rem;
+        margin-right: 97%;
+    }
+}
+
+@media(max-width: 620px) {
+    .conteudo__localidades_titulo {
+        background-color: var(--cor-05);
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
+    .conteudo__localidades_titulo_h1 {
+        color: var(--cor-06);
+        font-size: 1.6rem;
+    }
+    .conteudo__localidades_locais {
+        gap: 1.6rem;
+        padding: 0 1rem;
+        margin-bottom: 1.5rem;
+    }
+    .conteudo__locais_local {
+        gap: 0.8rem;
+    }
+    .conteudo__locais_local_img {
+        min-width: 100%;
+        height: 50vh;
+        border-radius: 1.5rem;
+    }
+    .conteudo__locais_local_descricao {
+        gap: 0.2rem;
+    }
+    .conteudo__locais_descricao_local {
+        font-size: 1.3rem;
+    }
+    .conteudo__locais_descricao_texto {
+        font-size: 1rem;
+    }
+    .conteudo__locais_descricao_link {
+        font-size: 1.2rem;
+    }
+}
+
+@media(max-width: 510px) {
+    .conteudo__localidades_titulo {
+        margin-top: 1.3rem;
+        margin-bottom: 1.3rem;
+    }
+    .conteudo__localidades_titulo_h1 {
+        font-size: 1.5rem;
+    }
+    .conteudo__localidades_locais {
+        gap: 1.3rem;
+        padding: 0 5%;
+        margin-bottom: 1.3rem;
+    }
+    .conteudo__locais_local_img {
+        min-width: 90%;
+        height: 45vh;
+        border-radius: 0.8rem;
+    }
+}
