--- a/Css/Componentes/Main/main.css
+++ b/Css/Componentes/Main/main.css
@@ -146,7 +146,89 @@
 
 /* RESPONSIVIDADE MAIN-NOVIDADES */
 
+@media(max-width: 1280px) {
+    .main__novidade {
+        background-color: blue;
+        gap: 2rem;
+        height: 100vh;
+    }
+    .main__novidade_titulo_h1 {
+        background-color: brown;
+        font-size: 2rem;
+    }
+    .main__novidade_slide {
+        background-color: aqua;
+        width: 95%;
+        min-height: 80%;
+    }
+    .novidade__slide_botao i {
+        font-size: 2.2rem;
+    }
+    .novidade__slides_relogio_tipo {
+        font-size: 1rem;
+    }
+    .novidade__slides_relogio_cor {
+        font-size: 1.1rem;
+    }
+    .novidade__slides_relogio_img {
+        width: 220px;
+        height: 250px;
+    }
+    .novidade__slides_relogio_marca {
+        font-size: 1.2rem;
+    }
+    .novidade__slides_relogio_preco {
+        font-size: 1.4rem;
+    }
+    .novidade__slides_relogio_descricao {
+        font-size: 1rem;
+    }
+    .novidade__slides_relogio_botao {
+        font-size: 1.4rem;
+    }
+}
+
+@media(max-width: 1190px) {
+    .main__novidade {
+        gap: 0.5rem;
+        margin: 0;
+    }
+    .novidade__slide_botao i {
+        font-size: 2rem;
+    }
+    .novidade__slides_relogio_cor {
+        font-size: 1rem;
+    }
+    .novidade__slides_relogio_img {
+        width: 190px;
+        height: 210px;
+    }
+    .novidade__slides_relogio_marca {
+        font-size: 1.1rem;
+    }
+    .novidade__slides_relogio_preco {
+        font-size: 1.3rem;
+    }
+    .novidade__slides_relogio_botao {
+        font-size: 1.3rem;
+    }
+}
+
+@media(max-width: 1050px) {
+    .novidade__slides_relogio_img {
+        width: 160px;
+        height: 180px;
+    }
+}
+
+@media(max-width: 930px) {
+    .novidade__slides {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
 
 
 /* RESPONSIVIDADE MAIN-AVALIAÇÕES */
+
 
