--- a/Css/Componentes/Main/main.css
+++ b/Css/Componentes/Main/main.css
@@ -13,7 +13,6 @@
         padding: 2rem 1rem;
     }
 }
-
 @media(max-width: 820px) {
     .main__info_sobre {
         font-size: 1.4rem;
@@ -25,7 +24,6 @@
         font-size: 1.1rem;
     }
 }
-
 @media(max-width: 660px) {
     .main__informacoes {
         gap: 0.6rem;
@@ -88,7 +86,6 @@
         font-size: 1.2rem;
     }
 }
-
 @media(max-width: 920px) {
     .main__catg {
         height: 70vh;
@@ -106,7 +103,6 @@
         display: none;
     }
 }
-
 @media(max-width: 520px) {
     .main__categorias {
         gap: 1rem;
@@ -146,33 +142,34 @@
 
 /* RESPONSIVIDADE MAIN-NOVIDADES */
 
-@media(max-width: 1280px) {
-    .main__novidade {
-        background-color: blue;
-        gap: 2rem;
-        height: 100vh;
-    }
+@media(max-width: 990px) {
     .main__novidade_titulo_h1 {
-        background-color: brown;
         font-size: 2rem;
     }
     .main__novidade_slide {
-        background-color: aqua;
-        width: 95%;
-        min-height: 80%;
+        height: 70vh;
     }
     .novidade__slide_botao i {
         font-size: 2.2rem;
     }
+    .novidade__slide {
+        height: 70vh;
+    }
+    .novidade__slides {
+        padding: 0.8rem;
+    }
+    .novidade__slides_relogio {
+        padding: 0.8rem;
+    }
     .novidade__slides_relogio_tipo {
+        top: 0.1rem;
+        left: 0.4rem;
         font-size: 1rem;
     }
     .novidade__slides_relogio_cor {
+        top: 0.1rem;
+        right: 0.4rem;
         font-size: 1.1rem;
-    }
-    .novidade__slides_relogio_img {
-        width: 220px;
-        height: 250px;
     }
     .novidade__slides_relogio_marca {
         font-size: 1.2rem;
@@ -185,50 +182,123 @@
     }
     .novidade__slides_relogio_botao {
         font-size: 1.4rem;
+        padding: 0.4rem;
     }
 }
 
-@media(max-width: 1190px) {
-    .main__novidade {
-        gap: 0.5rem;
-        margin: 0;
+@media(max-width: 840px) {
+    .main__novidade_titulo_h1 {
+        font-size: 1.8rem;
+    }
+    .main__novidade_slide {
+        height: 60vh;
     }
     .novidade__slide_botao i {
         font-size: 2rem;
     }
+    .novidade__slide {
+        height: 60vh;
+    }
+    .novidade__slides {
+        padding: 0.7rem;
+    }
+    .novidade__slides_relogio {
+        padding: 0.7rem;
+    }
     .novidade__slides_relogio_cor {
         font-size: 1rem;
-    }
-    .novidade__slides_relogio_img {
-        width: 190px;
-        height: 210px;
     }
     .novidade__slides_relogio_marca {
         font-size: 1.1rem;
     }
     .novidade__slides_relogio_preco {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
     .novidade__slides_relogio_botao {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
+        padding: 0.3rem;
     }
 }
 
-@media(max-width: 1050px) {
-    .novidade__slides_relogio_img {
-        width: 160px;
-        height: 180px;
+@media(max-width: 770px) {
+    .main__novidade_titulo_h1 {
+        font-size: 1.5rem;
     }
-}
-
-@media(max-width: 930px) {
+    .main__novidade_slide {
+        height: 120vh;
+    }
+    .novidade__slide {
+        height: 120vh;
+    }
     .novidade__slides {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        padding: 1rem;
+    }
+    .novidade__slides_relogio {
+        padding: 1rem;
+    }
+    .novidade__slides_relogio_img {
+        width: 120px;
+        height: 140px;
+    }
+    .novidade__slides_relogio_tipo {
+        font-size: 1.1rem;
+    }
+    .novidade__slides_relogio_cor {
+        font-size: 1.2rem;
+    }
+    .novidade__slides_relogio_marca {
+        font-size: 1.2rem;
+    }
+    .novidade__slides_relogio_preco {
+        font-size: 1.4rem;
+    }
+    .novidade__slides_relogio_botao {
+        font-size: 1.4rem;
+        padding: 0.4rem;
     }
 }
 
+@media(max-width: 550px) {
+    .main__novidade_slide {
+        height: 100vh;
+    }
+    .novidade__slide {
+        height: 100vh;
+    }
+    .novidade__slides {
+        gap: 0.2rem;
+        padding: 0.8rem;
+    }
+    .novidade__slides_relogio {
+        padding: 0.8rem;
+    }
+    .novidade__slides_relogio_img {
+        width: 100px;
+        height: 120px;
+    }
+    .novidade__slides_relogio_tipo {
+        font-size: 1rem;
+    }
+    .novidade__slides_relogio_cor {
+        font-size: 1.1rem;
+    }
+    .novidade__slides_relogio_marca {
+        font-size: 1rem;
+    }
+    .novidade__slides_relogio_preco {
+        font-size: 1.2rem;
+    }
+    .novidade__slides_relogio_descricao {
+        font-size: 0.9rem;
+    }
+    .novidade__slides_relogio_botao {
+        font-size: 1.2rem;
+        padding: 0.2rem;
+    }
+}
 
 /* RESPONSIVIDADE MAIN-AVALIAÇÕES */
-
 
