--- a/Css/Componentes/Main/main-novidades/main_novidades.css
+++ b/Css/Componentes/Main/main-novidades/main_novidades.css
@@ -17,12 +17,12 @@
 }
 
 .main__novidade_slide {
+    background-color: aquamarine;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 1rem;
-    width: 95%;
-    min-height: 90vh;
+    justify-content: space-around;
+    width: 100%;
+    height: 80vh;
 }
 
 .novidade__slide_botao {
@@ -42,23 +42,21 @@
 }
 
 .novidade__slide {
+    background-color: aqua;
     position: relative;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    width: 100%;
-    height: 70vh;
-    padding: 0.8rem;
+    width: 90%;
+    height: 80vh;
 }
 
 .novidade__slides {
-    display: flex;
-    flex-direction: row;
     position: absolute;
+    display: flex;
+    justify-content: center;
     gap: 0.5rem;
-    width: 100%;
+    padding: 1rem;
+    height: 100%;
     transition: all 0.5s ease 0.7s;
     -webkit-transition: all 0.5s ease 0.7s;
     transition-delay: 0.6s;
@@ -79,7 +77,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.3rem;
+    justify-content: space-around;
+    height: 100%;
     padding: 1rem;
     border-radius: 0.4rem;
 }
@@ -105,8 +104,8 @@
 }
 
 .novidade__slides_relogio_img {
-    width: 240px;
-    height: 270px;
+    width: 90%;
+    height: 50%;
 }
 
 .novidade__slides_relogio_marca {
@@ -134,7 +133,7 @@
     cursor: pointer;
     font-family: var(--fonte-main);
     font-size: 1.6rem;
-    width: 100%;
+    width: 80%;
     padding: 0.5rem;
     border: solid 2px var(--cor-04);
     border-radius: 0.6rem;
@@ -143,5 +142,4 @@
 
 .novidade__slides_relogio_botao:hover {
     background-color: var(--cor-02);
-    color: var(--cor-03);
 }
