--- a/Css/Componentes/Main/main-avaliacao/main_avaliacao.css
+++ b/Css/Componentes/Main/main-avaliacao/main_avaliacao.css
@@ -10,13 +10,14 @@
 
 .main__avaliacao_titulo {
     margin: 2rem auto;
+    border-bottom: solid 3px var(--cor-06);
 }
 
 .main__avaliacao_titulo_h1 {
     color: var(--cor-02);
     font-family: var(--fonte-main);
+    font-size: 2.2rem;
     padding-bottom: 0.4rem;
-    border-bottom: solid 3px var(--cor-06);
 }
 
 .main__avaliacao_slides {
@@ -56,16 +57,19 @@
 .main__avaliacao_slide_div_nome {
     color: var(--cor-06);
     font-family: var(--fonte-main);
+    font-size: 1.6rem;
 }
 
 .main__avaliacao_slide_div_cidade {
     color: var(--cor-07);
     font-family: var(--fonte-main);
+    font-size: 1.4rem;
 }
 
 .main__avaliacao_slide_div_descricao {
     color: var(--cor-06);
     font-family: var(--fonte-main);
+    font-size: 1.1rem;
 }
 
 .main__avaliacao_auto,
